# grain-of-life

./: CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  main.c  threads.c  threads.h
.github/workflows/: cmake-multi-platform.yml
